Update plugin-prov to 2.2.0